# Prueba-T-cnica-Data-Engineer-TeamCore

./: .coverage  .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  main_fixed.py  pyproject.toml  requirements.txt  validate_exercises.py
.github/workflows/: ci-cd-new.yml  ci-cd.yml
airflow/dags/: transactions_dag.py
airflow/scripts/: extract.py  load.py  transform.py  validate.py
airflow/tests/: test_etl.py
config/: settings.py
data/processed/: benchmark_report.md  log_analysis_pandas_streaming.parquet  log_analysis_polars.parquet
etl/: check_file.py  compress_log.py  processor.py  run_benchmark.py  run_etl.py  streaming_processor.py
modeling/: __init__.py  run_warehouse.py  validate_warehouse.py  warehouse.py
scripts/: generate_logs.py  generate_transactions.py  install_optional_deps.py
sql/: analysis_runner.py
sql/queries/: tarea1_vista_resumen.sql  tarea2_usuarios_multiples_fallas.sql  tarea3_deteccion_anomalias.sql  tarea4_indices_triggers.sql
tests/: test_basic.py  test_comprehensive.py
